designing the gallery carousel for the programs page

--- a/my_pages_app/templates/donate.html
+++ b/my_pages_app/templates/donate.html
@@ -4,14 +4,16 @@
     <img src="/static/images/Donation more.jpg" alt="" class="photo-image">
 </div>
 
-<div>
-  <p class="my-5">
+<div class="container-fluid ">
+  <p > <em>
     Street children can break out of generational poverty and become respected
     members of the society with your help. With your help we can get our children
-    off the streets and into safe spaces that they should be in.
+    off the streets and into safe spaces that they should be in.</em>
   </p>
 
-  <p>Make a secure donation using one of the options below:</p>
+  <hr>
+
+  <h3 class="mt-5"> <strong>Make a secure donation using one of the options below:</strong></h3>
   <p>Bank Name</p>
   <p>Account Name</p>
   <p>Account number</p>
