--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -29,32 +29,32 @@
           <li class="nav-item dropdown px-2 ">
             <a href="{% url 'whoweare' %}" class="nav-link nav-text d-inline-block">Who We are</a>
             <a class="nav-link nav-text dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-            <ul class="dropdown-menu px-3">
-              <li><a class="dropdown-item" href="#"></a>Our Mission</li>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Our Mission</a></li>
               <hr>
-              <li><a class="dropdown-item" href="#"></a>Our Vision</li>
+              <li><a class="dropdown-item" href="#">Our Vision</a></li>
               <hr>
-              <li><a class="dropdown-item" href="#"></a>Our Values</li>
+              <li><a class="dropdown-item" href="#">Our Values</a></li>
               <hr>
-              <li><a class="dropdown-item" href="#"></a>Our Target</li>
+              <li><a class="dropdown-item" href="#">Our Target</a></li>
               <hr>
-              <li><a class="dropdown-item" href="#"></a>Leadership</li>
+              <li><a class="dropdown-item" href="#">Leadership</a></li>
               <hr>
-              <li><a class="dropdown-item" href="#"></a>Advisory Board</li>
+              <li><a class="dropdown-item" href="#">Advisory Board</a></li>
             </ul>
           </li>
         
           <li class="nav-item dropdown px-2">
             <a href="{% url 'programs' %}" class="nav-link nav-text d-inline-block">Programs</a>
             <a href="" class="nav-link nav-text dropdown-toggle d-inline-block" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a> 
-              <ul class="dropdown-menu px-3 ">
-                <li><a class="dropdown-item" href="#"></a>Mobile Learning Outreach</li>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'mobile_learning' %}">Mobile Learning Outreach</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#"></a>Mentoring and Counselling</li>
+                <li><a class="dropdown-item" href="{% url 'mentoring_counselling' %}">Mentoring and Counselling</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#"></a>Placement & Re-integration</li>
+                <li><a class="dropdown-item" href="{% url 'placement_reintegration' %}">Placement & Re-integration</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#"></a>Community Support</li>
+                <li><a class="dropdown-item" href="{% url 'community_support' %}">Community Support</a></li>
               </ul>
           </li>
   
