--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -112,10 +112,10 @@
         <h2>Our Sponsors Include:</h2>
         <div class="container-fluid">
             <div class="rows d-flex justify-content-center gap-5">
-            <div class="volunteer-image col-sm-3"></div>
-            <div class="volunteer-image col-sm-3"></div>
-            <div class="volunteer-image col-sm-3"></div>
-            <div class="volunteer-image col-sm-3"></div>
+            <div class="sponsor-image col-sm-3"></div>
+            <div class="sponsor-image col-sm-3"></div>
+            <div class="sponsor-image col-sm-3"></div>
+            <div class="sponsor-image col-sm-3"></div>
         </div>
     </section>
     {% endblock %}
