--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -18,16 +18,15 @@
 </div>
 
 <div class="px-4 text-center yellow-section py-5">
-  <div class="col-lg-6 mx-auto pt-4">
+  <div class="col-lg-8 mx-auto pt-4">
     <h4 class="mb-5 mt-5">
       If you would like to become a part of our community of volunteers around
       the world, please fill out the form below.
     </h4>
     <!-- row-cols-1 row-cols-md-2 -->
     <div class="row g-4">
-
       <div class="col-md-6">
-        <div class="card" style="height: 260px;">
+        <div class="card">
           <div class="card-body">
             <h5 class="card-title">Adhoc Volunteers</h5>
             <p class="card-text">
@@ -42,7 +41,7 @@
       <div class="col-md-6">
         <div class="card">
           <div class="card-body">
-            <h5 class="card-title">informal Educators</h5>
+            <h5 class="card-title">Informal Educators</h5>
             <p class="card-text">
               This will suit individuals who love to teach and have valuable
               skills they can share or pass on to the children. Our learning
