--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content%}
 
-<div class="container-fluid p-0 blue-section">
+<div class="container-fluid p-0 mt-0 blue-section">
   <div class="row">
     <div class="programs_item col-md-6 col-sm-12">
       <img src="/static/images/Volunteer Page.jpg" alt="" class="programs_image">
