--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -1,61 +1,56 @@
 <!-- Nav Bar -->
 <section id="navigation" class="border border-warning">
   <div class="container">
-    <nav class="navbar navbar-expand-lg sticky-top">
+    <nav class="navbar navbar-expand-lg">
   <!-- sticky navbar is not working -->
       <a class="navbar-brand col-sm-1" href="/" style="height: 60px;">
         <img src="/static/images/street kids.jpg" alt="" style="width:100%; height:60px;">
       </a>
   
       <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarTogglerDemo01"
-        aria-controls="navbarTogglerDemo01"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
+        class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item px-2">
-            <a class="nav-link nav-text" href="{% url 'homepage' %}"
-              >Home</a
-            >
+            <a class="nav-link nav-text" href="{% url 'homepage' %}">Home</a>
           </li>
-          <li class="nav-item dropdown px-2 ">
+          <li class="px-1">
             <a href="{% url 'whoweare' %}" class="nav-link nav-text d-inline-block">Who We are</a>
-            <a class="nav-link nav-text dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Our Mission</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="#">Our Vision</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="#">Our Values</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="#">Our Target</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="#">Leadership</a></li>
-              <hr>
-              <li><a class="dropdown-item" href="#">Advisory Board</a></li>
-            </ul>
+            <li class="nav-item dropdown">
+              <a class="nav-link nav-text dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Our Mission</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="#">Our Vision</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="#">Our Values</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="#">Our Target</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="#">Leadership</a></li>
+                <hr>
+                <li><a class="dropdown-item" href="#">Advisory Board</a></li>
+              </ul>
+            </li>
           </li>
         
-          <li class="nav-item dropdown px-2">
+          <li class="px-1">
             <a href="{% url 'programs' %}" class="nav-link nav-text d-inline-block">Programs</a>
-            <a href="" class="nav-link nav-text dropdown-toggle d-inline-block" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a> 
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="{% url 'mobile_learning' %}">Mobile Learning Outreach</a></li>
-                <hr>
-                <li><a class="dropdown-item" href="{% url 'mentoring_counselling' %}">Mentoring and Counselling</a></li>
-                <hr>
-                <li><a class="dropdown-item" href="{% url 'placement_reintegration' %}">Placement & Re-integration</a></li>
-                <hr>
-                <li><a class="dropdown-item" href="{% url 'community_support' %}">Community Support</a></li>
-              </ul>
+            <li class="nav-item dropdown">
+              <a href="" class="nav-link nav-text dropdown-toggle d-inline-block" role="button" data-bs-toggle="dropdown" aria-expanded="false"><a> 
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="{% url 'mobile_learning' %}">Mobile Learning Outreach</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="{% url 'mentoring_counselling' %}">Mentoring and Counselling</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="{% url 'placement_reintegration' %}">Placement & Re-integration</a></li>
+                  <hr>
+                  <li><a class="dropdown-item" href="{% url 'community_support' %}">Community Support</a></li>
+                </ul>
+            </li>
           </li>
   
           <li class="nav-item px-2">
