fixing links and hover effects

--- a/my_pages_app/templates/donate.html
+++ b/my_pages_app/templates/donate.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container-fluid ">
-  <p > <em>
+  <p style="color: #0d8dbb" > <em>
     Street children can break out of generational poverty and become respected
     members of the society with your help. With your help we can get our children
     off the streets and into safe spaces that they should be in.</em>
