--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -28,7 +28,7 @@
           >
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">Mission</a>
+          <a href="http://127.0.0.1:8000/whoweare/#mission_vision" class="nav-link p-0 text-reset">Mission and Vision</a>
         </li>
         <li class="nav-item mb-2">
           <a href="{% url 'programs' %}" class="nav-link p-0 text-reset"
@@ -36,10 +36,10 @@
           >
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">The Team</a>
+          <a href="http://127.0.0.1:8000/whoweare/#our_advisory_board" class="nav-link p-0 text-reset">Our Advisory Board</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link p-0 text-reset">Make a donation</a>
+          <a href="{% url 'donate' %}" class="nav-link p-0 text-reset">Make a donation</a>
         </li>
       </ul>
     </div>
