--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -1,41 +1,44 @@
-{% extends 'base.html' %} {% block content%}
-<div class="photo-item">
-    <img src="/static/images/passion.jpg" alt="" class="photo-image">
-</div>
-<div>
-    <div>
-        <div class="container-fluid contact_hero">
-            <div class="row">
-                <div class="col-lg-6 pt-3 pb-3">
-                    <div class="pt-3 pb-3">
-                        <h3 class="text-start">Reach out to us</h3>
-                        <p class="text-start">you can contact us as follows:</p>
+{% extends 'base.html' %} 
+
+{% block content%}
+
+    <div class="photo-item">
+        <img src="/static/images/passion.jpg" alt="" class="photo-image">
+    </div>
+
+   
+        <div class="container-fluid contact_hero text-start">
+            <div class="row p-5">
+                <div class="col-lg-6">
+                    <div class="py-3">
+                        <h2>  Reach out to us.</h2>
+                        <p>you can contact us as follows:</p>
                     </div>
 
-                    <div class="d-flex text-start ">
+                    <div>
                         <div class="row">
-                            <div class="col-lg-6 pt-4 pb-4">
+                            <div class="col-lg-6 py-4">
                                 <i class="fa-solid fa-phone contact-icon"></i>
-                                <p>call us </p>
+                                <p><strong>call us </strong></p>
                                 <p>0802 000 0000</p>
                             </div>
 
-                            <div class="col-lg-6 pt-4 pb-4">   
+                            <div class="col-lg-6 py-4">   
                                 <i class="fa-regular fa-envelope contact-icon"></i>
-                                <p>Email us at:</p>  
-                                <p>Streetkidscan@gmail.com</p> 
+                                <p><strong>Email us at: </strong></p>  
+                                <p>info@StreetKidscan.com</p> 
                             </div>
 
-                            <div class="col-lg-6 pt-4 pb-4">  
+                            <div class="col-lg-6 py-4">  
                                 <i class="fa-regular fa-address-book contact-icon"></i>
-                                <p>find us at:</p>
+                                <p><strong>find us at:</strong></p>
                                 <p>Address</p>
                                 <p>Lagos, Nigeria</p>
                             </div>
 
-                            <div class="col-lg-6 pt-4 pb-4">
+                            <div class="col-lg-6 py-4">
                                 <i class="fa-regular fa-clock contact-icon"></i> 
-                                <p>Working Hours</p>
+                                <p><strong>Working Hours</strong></p>
                                 <p>Monday - Friday</p>
                                 <p>10:00am to 4:00pm</p>
                             </div>
@@ -43,21 +46,20 @@
                     </div>
                 </div>
 
-                
-                    <div class="col-lg-6 pt-3 pb-3 yellow-section">
+                    
+                <div class="col-lg-6 py-3 yellow-section">
+                    <div class="container">
                         <h2>Get in Touch with Us. </h2>
-                        <div class="container">
-                            <form action="" method="post">
-                                {% csrf_token %}
-                                {{ form.as_p }}
-                                <input type="submit" value="Submit">
-                            </form>
-                        </div>
+                        <form action="" method="post">
+                            {% csrf_token %}
+                            {{ form.as_p }}
+                            <input type="submit" value="Submit" class="btn">
+                        </form>
                     </div>
+                </div>
             </div>
         </div>
-    </div>
-</div>
+   
 
 
 {% endblock %}
