--- a/my_pages_app/templates/home.html
+++ b/my_pages_app/templates/home.html
@@ -51,7 +51,7 @@
               <h5>Mobile Learning Outreach</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
-              <a href="#" class="card-link">See more...</a>
+              <a href="{% url 'mobile_learning' %}" class="card-link">See more...</a>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -60,7 +60,7 @@
               <h5>Mentoring & Counselling</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
-              <a href="#" class="card-link">See more...</a>
+              <a href="{% url 'mentoring_counselling' %}" class="card-link">See more...</a>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -69,7 +69,7 @@
               <h5>Placement and Reintegration</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
-              <a href="#" class="card-link">See more...</a>
+              <a href="{% url 'placement_reintegration' %}" class="card-link">See more...</a>
             </div>
           </div>
           <div class="carousel-item c-item">
@@ -78,7 +78,7 @@
               <h5>Community Support</h5>
               <p>Some quick example text to build on the card title and make up
                         the bulk of the card's content.</p>
-              <a href="#" class="card-link">See more...</a>
+              <a href="{% url 'community_support' %}" class="card-link">See more...</a>
             </div>
           </div>
         </div>
