--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -15,7 +15,7 @@
     <!-- who we are -->
     <section class="white-section">
       <div class="px-4 py-5 my-5">
-        <div class="col-lg-6 mx-auto">
+        <div class="col-lg-8 mx-auto">
           <p class="mb-4 fst-italic"><strong>
             Street Kids Can is a volunteer led organization committed to
             nurturing and unlocking the skills and talents of street children
@@ -29,12 +29,11 @@
     </section>
 
     <!-- our mission and vision-->
-    <section class="yellow-section">
+    <section class="yellow-section" id="mission_vision">
       <div class="container">
         <div class="row mx-auto">
           <div class="align-items-center py-5 my-5 mx-auto col-lg-5">
-            <div class=""></div>
-              <h2 >Our Mission</h2>
+              <h2>Our Mission</h2>
               <p>
                 To empower street children to find their path out of poverty by
                 nurturing their strengths and talents through informal educational
@@ -57,7 +56,7 @@
   
     <!-- our values -->
     
-    <section >
+    <section class="white-section" id="our_values">
       <div class="container">
         <div class="py-5 my-5">
           <h2>Our Values</h2>
@@ -101,12 +100,15 @@
     </section>
     
     <!-- Our Target -->
-    <section class="yellow-section">
+    <section class="yellow-section" id="our_target">
 
       <div class="container">
-        <div class="row d-flex flex-row-reverse align-items-center g-5 py-5 my-5">
-          <h2 class="col-lg-6">Our Target</h2>
-          <div class="col-lg-4 text-start">
+        <div class="row mx-auto d-flex flex-row-reverse align-items-center">
+          <div class="col-lg-5 py-5 my-5 mx-4 ">
+            <h2 >Our Target</h2>
+          </div>
+        
+          <div class="col-lg-5 py-5 my-5 mx-5 text-start">
             <p>
               By the year 2032, we aim to have impacted 10,000 street kids across
               Nigeria and successfully re-integrate them into the mainstream society
@@ -124,34 +126,24 @@
       </div>
   
     </section>
+
     <!-- our approach -->
-    <section class="white-section">
+    <section class="white-section" id="our_approach">
 
       <div class="container">
-        <div class="row align-items-center g-5 py-5 my-5">
-          <h2 class="col-lg-6">Our Approach</h2>
-          <div class="col-lg-4 text-start">
-            <p>  We believe a positive self-image is at the core of street kids’ ability
-              to reintegrate successfully into the mainstream society. Unfortunately,
-              the complex circumstances that leads to the kids ending up on the street
-              often leaves them feeling unworthy. </p>
+        <div class="row align-items-center">
+          <div class="col-lg-5 py-5 my-5 mx-4">
+            <h2>Our Approach</h2>
+          </div>
+          
+          <div class="col-lg-5 py-5 my-5 mx-5 text-start">
+            <p>  We believe a positive self-image is at the core of street kids’ ability to successfully reintegrate into mainstream society. Unfortunately, the complex circumstances leading to these kids being on the streets often leaves them feeling unworthy. </p>
 
-              <p> As a result, range of programs are
-                designed to nurture and unlock the strengths and talents of each child
-                and help then regain their self-esteem and be more hopeful about a
-                brighter future. </p>
+            <p> As a result, our programs are designed to nurture and unlock the strengths and talents of each child to help them regain their self-esteem hopes about a brighter future. </p>
 
-                <p> Our programs are designed to facilitate self-discovery
-                  and nurture hidden talents through informal education and recreational
-                  activities. Children in our programs will spend time each week across
-                  different activities varying from the mobile learning school to therapy
-                  and counselling sessions as well as vocational and skills acquisition
-                  programs based on their individual needs.</p>
+            <p> Our programs are designed to facilitate self-discovery and nurture hidden talents through informal education and recreational activities. Children in our programs will spend time each week participating in activities varying from mobile learning to therapy and counselling sessions as well as vocational and skills acquisition programs based on their individual interests.</p>
 
-                  <p> Our volunteers and partners
-                    will dedicate time each week to facilitate the programs alongside our
-                    public and private sector partners who provide us with access to their
-                    spaces and resources.</p>
+            <p> Our volunteers and partners will dedicate time each week to facilitate the programs alongside our public and private sector partners who provide us with access to their spaces and resources.</p>
           </div>
       
         </div>
@@ -160,7 +152,7 @@
 
     <!-- Leadership -->
    
-    <section class="yellow-section">
+    <section class="yellow-section" id="our_leadership">
         <div class="container py-5">
           <h2>Leadership</h2>
         <div>
@@ -173,7 +165,7 @@
     </section>
 
     <!-- Advisory Board -->
-    <section class="white-section my-5">
+    <section class="white-section my-5" id="our_advisory_board">
       <h2>Advisory Board</h2>
 
       <div class=" container-fluid py-2 row g-5">
