--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -22,17 +22,17 @@
             <li class="nav-item dropdown">
               <a class="nav-link nav-text dropdown-toggle d-inline-block" href=""  role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Our Mission</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#mission_vision">Our Mission</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#">Our Vision</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#mission_vision">Our Vision</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#">Our Values</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#our_values">Our Values</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#">Our Target</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#our_target">Our Target</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#">Leadership</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#our_leadership">Leadership</a></li>
                 <hr>
-                <li><a class="dropdown-item" href="#">Advisory Board</a></li>
+                <li><a class="dropdown-item" href="http://127.0.0.1:8000/whoweare/#our_advisory_board">Advisory Board</a></li>
               </ul>
             </li>
           </li>
