--- a/my_pages_app/templates/programs_learning.html
+++ b/my_pages_app/templates/programs_learning.html
@@ -6,8 +6,10 @@
 </div>
 
 <div class="container-fluid">
-    <!-- <div class="col-lg-6 mx-auto"></div> -->
-    <p>The Mobile Learning outreach is our flagship program which is aimed at nurturing and harnessing talents out of street children through non-traditional educational activities. We have designed a “mobile school” which will be placed in our core target areas where children will be engaged by volunteers in extracurricular activities with the aim of developing each child’s unique abilities and empowering them with the right attitude to seek a better life for themselves. We partner with both public and private sector organisations who provide us with access to their spaces to host our mobile learning programs.</p>
+    <div class="col-lg-8 mx-auto">
+        <p>The Mobile Learning outreach is our flagship program which is aimed at nurturing and harnessing talents out of street children through non-traditional educational activities. We have designed a “mobile school” which will be placed in our core target areas where children will be engaged by volunteers in extracurricular activities with the aim of developing each child’s unique abilities and empowering them with the right attitude to seek a better life for themselves. We partner with both public and private sector organisations who provide us with access to their spaces to host our mobile learning programs.</p>
+    </div>
+    
 </div>
 
 <div>
@@ -17,19 +19,19 @@
 <!-- modal -->
 
 <div class="container-fluid row" id="gallery" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    <div class="col-12 col-sm-6 col-lg-3">
+    <div class="col-12 col-sm-6 col-lg-3 py-2" >
       <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="0">
     </div>
 
-    <div class="col-12 col-sm-6 col-lg-3">
+    <div class="col-12 col-sm-6 col-lg-3 py-2">
       <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="1">
     </div>
 
-    <div class="col-12 col-sm-6 col-lg-3">
+    <div class="col-12 col-sm-6 col-lg-3 py-2">
       <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="2">
     </div>
 
-    <div class="col-12 col-sm-6 col-lg-3">
+    <div class="col-12 col-sm-6 col-lg-3 py-2">
       <img class="w-100" src="/static/images/target2.jpg" data-bs-target="#carouselExample" data-slide-to="3">
     </div>
 
@@ -50,8 +52,8 @@
 
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="/static/images/target2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-item active" >
+                            <img src="/static/images/target2.jpg" class="d-block w-100"alt="...">
                         </div>
                         <div class="carousel-item">
                             <img src="/static/images/target2.jpg" class="d-block w-100" alt="...">
