--- a/my_pages_app/templates/make_an_impact.html
+++ b/my_pages_app/templates/make_an_impact.html
@@ -83,9 +83,9 @@
 
     <a
       class="btn btn-bg btn-color mt-5 btn-hover"
-      href="https://docs.google.com/forms/d/1gpjZkC8eaWpeuTRSvUAGV6O1TGeAA7DsFSRBNWG13eA/edit"  target="_blank"
+      href="https://form.jotform.com/230355506032344"  target="_blank"
       role="button"
-      >Become a Volunteer</a
+      >Become a Volunteer </a
     >
   </div>
 </div>
