--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -60,36 +60,36 @@
       <div class="container">
         <div class="py-5 my-5">
           <h2>Our Values</h2>
-          <div class="text-start mx-auto d-inline-flex mt-5 row g-5">
-            <div class="d-block align-items-center col-lg-3"> 
-              <div><iconify-icon icon="icon-park-outline:oval-love" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+          <div class="text-start mx-auto d-inline-flex mt-3 row g-5">
+            <div class="d-block align-items-center col-md-3 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="icon-park-outline:oval-love" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Empathy</p>
             </div>
-            <div class="d-block align-items-center col-lg-3"> 
-              <div><iconify-icon icon="arcticons:sbb-inclusive" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
+            <div class="d-block align-items-center col-md-3 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="arcticons:sbb-inclusive" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Inclusiveness</p> 
             </div>
-            <div class="d-block align-items-center col-lg-3"> 
-              <div><iconify-icon icon="healthicons:community-meeting-outline" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
+            <div class="d-block align-items-center col-md-3 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="healthicons:community-meeting-outline" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Community</p> 
             </div>
-            <div class="d-block align-items-center col-lg-3"> 
-              <div><iconify-icon icon="fluent:equal-circle-24-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+            <div class="d-block align-items-center col-md-3 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="fluent:equal-circle-24-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Equity</p> 
             </div>
           </div>
 
-          <div class="text-start mx-auto d-inline-flex my-5 row g-5">
-            <div class="d-block align-items-center col-lg-4"> 
-              <div><iconify-icon icon="mdi:help-outline" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
+          <div class="text-start mx-auto d-inline-flex my-3 row g-5">
+            <div class="d-block align-items-center col-md-4 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="mdi:help-outline" style="color: #fdbf00; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Empowerment</p> 
             </div>
-            <div class="d-block align-items-center col-lg-4"> 
-              <div><iconify-icon icon="uit:chart-growth" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
+            <div class="d-block align-items-center col-md-4 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon icon="uit:chart-growth" style="color: #0d8bbb; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Sustainability</p> 
             </div>
-            <div class="d-block align-items-center col-lg-4"> 
-              <div><iconify-icon inline icon="fluent:target-arrow-16-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
+            <div class="d-block align-items-center col-md-4 col-sm-6"> 
+              <div class="d-flex justify-content-center"><iconify-icon inline icon="fluent:target-arrow-16-regular" style="color: #ff4552; font-size: 160px;"></iconify-icon></div>
               <p class="d-flex justify-content-center">Accountablity</p> 
             </div>
           </div>
@@ -158,7 +158,7 @@
         <div>
         <div>
           <div class="leadership-image mx-auto"></div>
-          <h5>Oyinda Kazeem</h5>
+          <h5 class="mt-2 p-1">Oyinda Kazeem</h5>
           <p>Founder</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
@@ -169,59 +169,59 @@
       <h2>Advisory Board</h2>
 
       <div class=" container-fluid py-2 row g-5">
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Omolara Fausat Olanrewaju</h5>
+          <h5 class="mt-2 p-1">Omolara Fausat Olanrewaju</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Oyinkansola Edet </h5>
+          <h5 class="mt-2 p-1">Oyinkansola Edet </h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
       
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Tomi Odunsi</h5>
+          <h5 class="mt-2 p-1">Tomi Odunsi</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Yemi Afariogun</h5>
+          <h5 class="mt-2 p-1">Yemi Afariogun</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Jokotola Edu</h5>
+          <h5 class="mt-2 p-1">Jokotola Edu</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Femi Williams</h5>
+          <h5 class="mt-2 p-1">Femi Williams</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>Ibrahim Onikoro</h5>
+          <h5 class="mt-2 p-1">Ibrahim Onikoro</h5>
           <p>Title</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
 
-        <div class="col-lg-3 col-md-4">
+        <div class="col-lg-3 col-sm-4">
           <div class="leadership-image mx-auto"></div>
-          <h5>The Treasurer</h5>
+          <h5 class="mt-2 p-1">The Treasurer</h5>
           <p>Treasurer</p>
           <p>short text about the person. this should take about 3 lines</p>
         </div>
