--- a/my_pages_app/templates/footer.html
+++ b/my_pages_app/templates/footer.html
@@ -3,7 +3,7 @@
 <footer id="footer" class="py-5 px-5 my-5 container-fluid">
   <div class="row justify-content-center">
     <div class="col-6 col-md-2 mb-3">
-      <h5>StreetKidsCan</h5>
+      <h5><a href="#" style="color: #fff;">StreetKidsCan</a></h5>
       <ul class="nav flex-column">
         <li class="nav-item mb-2">
           <a href="#" class="nav-link p-0 text-reset">Address</a>
