--- a/my_pages_app/templates/get_in_touch.html
+++ b/my_pages_app/templates/get_in_touch.html
@@ -9,7 +9,7 @@
    
         <div class="container-fluid contact_hero text-start">
             <div class="row p-5">
-                <div class="col-lg-6">
+                <div class="col-md-6">
                     <div class="py-3">
                         <h2>  Reach out to us.</h2>
                         <p>you can contact us as follows:</p>
@@ -19,7 +19,7 @@
                         <div class="row">
                             <div class="col-lg-6 py-4">
                                 <i class="fa-solid fa-phone contact-icon"></i>
-                                <p><strong>call us </strong></p>
+                                <p><strong>Call us </strong></p>
                                 <p>0802 000 0000</p>
                             </div>
 
@@ -31,7 +31,7 @@
 
                             <div class="col-lg-6 py-4">  
                                 <i class="fa-regular fa-address-book contact-icon"></i>
-                                <p><strong>find us at:</strong></p>
+                                <p><strong>Find us at:</strong></p>
                                 <p>Address</p>
                                 <p>Lagos, Nigeria</p>
                             </div>
@@ -47,7 +47,7 @@
                 </div>
 
                     
-                <div class="col-lg-6 py-3 yellow-section">
+                <div class="col-md-6 py-3 yellow-section contact-form ">
                     <div class="container">
                         <h2>Get in Touch with Us. </h2>
                         <form action="" method="post">
