--- a/my_pages_app/templates/header.html
+++ b/my_pages_app/templates/header.html
@@ -1,8 +1,8 @@
 <!-- Nav Bar -->
-<section id="navigation" class="border border-warning">
+<section id="navigation" class="border border-warning sticky-top white-section">
   <div class="container">
     <nav class="navbar navbar-expand-lg">
-  <!-- sticky navbar is not working -->
+  <!-- sticky navbar is not working --> 
       <a class="navbar-brand col-sm-1" href="/" style="height: 60px;">
         <img src="/static/images/street kids.jpg" alt="" style="width:100%; height:60px;">
       </a>
