--- a/my_pages_app/templates/programs.html
+++ b/my_pages_app/templates/programs.html
@@ -84,7 +84,7 @@
                 <a href="{% url 'community_support' %}">Learn More...</a>
             </div>
             <div class="col-lg-5 mx-auto">
-                <img src="/static/images/support.jpg" style="width:100%;" alt="counselling photo">
+                <img src="/static/images/community hands.jpg" style="width:100%;" alt="counselling photo">
             </div>
         </div>
     </div>
