--- a/my_pages_app/templates/who_we_are.html
+++ b/my_pages_app/templates/who_we_are.html
@@ -102,13 +102,16 @@
     <!-- Our Target -->
     <section class="yellow-section" id="our_target">
 
-      <div class="container">
-        <div class="row mx-auto d-flex flex-row-reverse align-items-center">
-          <div class="col-lg-5 py-5 my-5 mx-4 ">
-            <h2 >Our Target</h2>
+      <div class="container-fluid">
+        <div class="row d-flex flex-row-reverse align-items-center">
+      
+          <div class="col-md-5 ">
+         
+            <h2 class="target-heading">Our Target</h2>
           </div>
         
-          <div class="col-lg-5 py-5 my-5 mx-5 text-start">
+          <div class="col-md-6 text-start">
+         
             <p>
               By the year 2032, we aim to have impacted 10,000 street kids across
               Nigeria and successfully re-integrate them into the mainstream society
@@ -130,13 +133,13 @@
     <!-- our approach -->
     <section class="white-section" id="our_approach">
 
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-5 py-5 my-5 mx-4">
-            <h2>Our Approach</h2>
+      <div class="container-fluid">
+        <div class="row d-flex align-items-center">
+          <div class="col-md-5">
+            <h2 class="approach-heading">Our Approach</h2>
           </div>
           
-          <div class="col-lg-5 py-5 my-5 mx-5 text-start">
+          <div class="col-md-6 text-start" style="text-align: justify;">
             <p>  We believe a positive self-image is at the core of street kids’ ability to successfully reintegrate into mainstream society. Unfortunately, the complex circumstances leading to these kids being on the streets often leaves them feeling unworthy. </p>
 
             <p> As a result, our programs are designed to nurture and unlock the strengths and talents of each child to help them regain their self-esteem hopes about a brighter future. </p>
